Criar banco de dados

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ appsettings.Development.json
 *.user
 *.userosscache
 *.sln.docstates
+*/*/Migrations
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
