--- a/src/MyFinanceWeb.Infra.Data/MyFinanceWeb.Infra.Data.csproj
+++ b/src/MyFinanceWeb.Infra.Data/MyFinanceWeb.Infra.Data.csproj
@@ -3,7 +3,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
-      <PrivateAssets>all</PrivateAssets>
+      <PrivateAssets>none</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.13" />
