--- a/src/MyFinanceWeb.Web/appsettings.json
+++ b/src/MyFinanceWeb.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=SQLServer\\Instance;Database=MyFinance;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
+    
 }
