--- a/src/MyFinanceWeb.Web/MyFinanceWeb.Web.csproj
+++ b/src/MyFinanceWeb.Web/MyFinanceWeb.Web.csproj
@@ -2,6 +2,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MyFinanceWeb.Infra.IoC\MyFinanceWeb.Infra.IoC.csproj" />
+    <ProjectReference Include="..\MyFinanceWeb.Application\MyFinanceWeb.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
   </ItemGroup>
 
   <PropertyGroup>
