--- a/src/MyFinanceWeb.Web/Properties/launchSettings.json
+++ b/src/MyFinanceWeb.Web/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5220",
+      "applicationUrl": "http://localhost:5220;https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
