--- a/src/MyFinanceWeb.Web/appsettings.json
+++ b/src/MyFinanceWeb.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=SQLServer\\Instance;Database=MyFinance;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=SQLServer\\Instance;Database=MyFinance;TrustServerCertificate=true"
   }
     
 }
