feat: Servidor com Docker Compose

--- a/src/MyFinanceWeb.Infra.Data/Dockerfile
+++ b/src/MyFinanceWeb.Infra.Data/Dockerfile
@@ -10,6 +10,9 @@ COPY ./Scripts /usr/config
 COPY ./entrypoint.sh /usr/config
 COPY ./configure-db.sh /usr/config
 
+RUN sed -i -e 's/\r\n/\n/g' /usr/config/*.sh 
+RUN sed -i -e 's/\r/\n/g' /usr/config/*.sh 
+
 # Grant permissions for to our scripts to be executable
 RUN chmod +x /usr/config/entrypoint.sh
 RUN chmod +x /usr/config/configure-db.sh
