feat: Servidor com Docker Compose

--- a/src/MyFinanceWeb.Web/appsettings.Production.json
+++ b/src/MyFinanceWeb.Web/appsettings.Production.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1435;Database=MyFinance;User Id=sa;Password=Password@12345;TrustServerCertificate=true"
+    "DefaultConnection": "Server=myfinance-database;Database=MyFinance;User Id=sa;Password=Password@12345;TrustServerCertificate=true"
   }
 }
