--- a/src/MyFinanceWeb.Infra.Data/MyFinanceWeb.Infra.Data.csproj
+++ b/src/MyFinanceWeb.Infra.Data/MyFinanceWeb.Infra.Data.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
       <PrivateAssets>none</PrivateAssets>
