--- a/src/MyFinanceWeb.Web/MyFinanceWeb.Web.csproj
+++ b/src/MyFinanceWeb.Web/MyFinanceWeb.Web.csproj
@@ -1,6 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyFinanceWeb.Application\MyFinanceWeb.Application.csproj" />
     <ProjectReference Include="..\MyFinanceWeb.Infra.IoC\MyFinanceWeb.Infra.IoC.csproj" />
   </ItemGroup>
 
