--- a/src/MyFinanceWeb.Application/MyFinanceWeb.Application.csproj
+++ b/src/MyFinanceWeb.Application/MyFinanceWeb.Application.csproj
@@ -14,4 +14,11 @@
     <ProjectReference Include="..\MyFinanceWeb.Domain\MyFinanceWeb.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyFinanceWeb.Domain\MyFinanceWeb.Domain.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
